# zagg-core

./: .gitignore  .gitmodules  INSTALL.md  Makefile.am  README.md  Zagg Notes.md  common.mk  configure.ac  start_network.sh  stellar-core.cfg  stellar.db-shm
Builds/VisualStudio/: stellar-core.vcxproj  stellar-core.vcxproj.filters
Builds/VisualStudio/libmedida/: libmedida.vcxproj
Builds/VisualStudio/libsoci/: libsoci.vcxproj
Builds/VisualStudio/libsoci_postgresql/: libsoci_postgresql.vcxproj
Builds/VisualStudio/libsoci_sqlite3/: libsoci_sqlite3.vcxproj
Builds/VisualStudio/libsqlite/: libsqlite.vcxproj
build-aux/m4/: boost.m4
config/: config_skeleton.cfg  standalone_node_config.cfg
config/node-standalone/: stellar-core.cfg
config/node01/: bitcoin.conf  stellar-core.cfg
config/node02/: bitcoin.conf  stellar-core.cfg
docs/: README.md
lib/: Makefile.am
scripts/: clean-up.sh  start-standalone.sh
src/: Makefile.am
src/database/: Database.cpp
src/herder/: HerderImpl.cpp
src/ledger/: AccountFrame.cpp  AccountFrame.h
src/main/: ApplicationUtils.cpp  ApplicationUtils.h  CommandHandler.cpp  CommandHandler.h  Config.cpp  Config.h  DeprecatedCommandLine.cpp  main.cpp
src/test/: TxTests.cpp
src/transactions/: MarkAccountOpFrame.cpp  MarkAccountOpFrame.h  MarkAccountTests.cpp  MineBlockOpFrame.cpp  MineBlockOpFrame.h  OperationFrame.cpp  SignatureChecker.cpp  TransactionFrame.cpp  TransactionFrame.h
src/xdr/: Stellar-ledger-entries.x  Stellar-transaction.x
utxo/: .gitignore  Makefile.am  README.MD  configure.ac
utxo/lib/: add.cpp  add.h
utxo/src/: main.cpp
